Put in CSS grid for home page, transparent colors for header, footer, form

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -4,3 +4,5 @@ $dark-green: #426151;
 $green: #82A684;
 $light-green: #B8CCAF;
 $lighter-green: #DDE5D9;
+
+$transparent: rgba(255, 255, 255, 0.175)
