Changed to blue color scheme

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,8 +1,16 @@
 $pearl: #EDEEEA;
 $beige: #D9DDC5;
+
 $dark-green: #426151;
 $green: #82A684;
 $light-green: #B8CCAF;
 $lighter-green: #DDE5D9;
 
-$transparent: rgba(255, 255, 255, 0.175)
+$darker-blue: #0e1b25;
+$dark-blue: #1d3549;
+$blue: #4785b8;
+$light-blue: #91b6d4;
+$lighter-blue: #dae7f1;
+
+$transparent: rgba(255, 255, 255, 0.175);
+$zero-opacity: rgba(0, 0, 0, 0);
