Fixed horizontal scrollbar issue

--- a/src/components/Admin/Calendar/calendar.html
+++ b/src/components/Admin/Calendar/calendar.html
@@ -42,13 +42,19 @@
           class="day-num-header">
           {{ day.num }}
         </div>
+
         <div class="event-list">
-          <div
-            v-on:dblclick="onDblClickEvent"
-            class="event">
-            lalala
-          </div>
+          <div v-on:dblclick="onDblClickEvent" class="event">lalala</div>
+          <div v-on:dblclick="onDblClickEvent" class="event">lalala</div>
+          <div v-on:dblclick="onDblClickEvent" class="event">lalala</div>
+          <div v-on:dblclick="onDblClickEvent" class="event">lalala</div>
+          <div v-on:dblclick="onDblClickEvent" class="event">lalala</div>
+          <div v-on:dblclick="onDblClickEvent" class="event">lalala</div>
+          <div v-on:dblclick="onDblClickEvent" class="event">lalala</div>
+          <div v-on:dblclick="onDblClickEvent" class="event">lalala</div>
+          <div v-on:dblclick="onDblClickEvent" class="event">lalala</div>
         </div>
+
       </div>
 
       <div
