Moved nav menu to left side. Create job employee drop-down now shows all employees from db. Value of the selection is the user_id

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -12,5 +12,8 @@ $blue: #4785b8;
 $light-blue: #91b6d4;
 $lighter-blue: #dae7f1;
 
+$light-grey: rgb(233, 233, 233);
+$light-gray: rgb(233, 233, 233);
+
 $transparent: rgba(255, 255, 255, 0.84);
 $zero-opacity: rgba(0, 0, 0, 0);
