Refactored calendar day rendering into one v-for loop

--- a/src/components/Admin/Calendar/calendar.html
+++ b/src/components/Admin/Calendar/calendar.html
@@ -21,23 +21,14 @@
         v-for="dayName in DAY_NAMES">
         {{ dayName }}
       </div>
-<!--
-      <div
-        class="day day-prev-month"
-        v-for="day in getDaysOfMonthData(-1)"
-        :dayNum="day.num"
-        :monthNum="currentMonth - 1"
-        v-on:click="catchClickOnDay">
-        <div class="day-num-header">{{ day.num }}</div>
-      </div> -->
 
       <div
-        class="day day-current-month"
         v-for="day in displayedDays()"
         :dayNum="day.num"
         :monthNum="currentMonth"
         v-on:dblclick="catchDblClickOnDay"
         v-on:click="catchClickOnDay"
+        :class=dayStyleClass(day.monthDiff)
       >
         <div
           class="day-num-header">
@@ -48,15 +39,6 @@
           <!-- <event v-for="event in day.events"></event> -->
         </div>
       </div>
-<!--
-      <div
-        class="day day-prev-month"
-        v-for="day in getDaysOfMonthData(1)"
-        :dayNum="day.num"
-        :monthNum="currentMonth + 1"
-        v-on:click="catchClickOnDay">
-        <div class="day-num-header">{{ day.num }}</div>
-      </div> -->
 
     </div>
   </div>
