Calendar now shows an event for each one of employee's jobs (basic)

--- a/src/components/Admin/Calendar/calendar.html
+++ b/src/components/Admin/Calendar/calendar.html
@@ -22,6 +22,7 @@
         {{ dayName }}
       </div>
 
+
       <div
         v-for="day in displayedDays()"
         :dayNum="day.num"
@@ -36,9 +37,14 @@
         </div>
 
         <div class="event-list">
-          <!-- <event v-for="event in day.events"></event> -->
+          <event
+            v-for="event in day.events"
+            :eventData="event"
+            :key="event.id"
+          />
         </div>
       </div>
+
 
     </div>
   </div>
