--- a/src/components/Admin/Calendar/calendar.scss
+++ b/src/components/Admin/Calendar/calendar.scss
@@ -1,23 +1,32 @@
 @import "../../../colors.scss";
 
 .wrapper {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
 
-  .date-nav {
-    margin: 1em;
+  .calendar-header {
+    display: flex;
 
-    .date-nav-btn {
-      cursor: pointer;
-      &:hover {
-        background-color: lime;
+    .date-nav {
+      margin: 1em;
+      margin-left: auto;
+
+      .date-nav-btn {
+        cursor: pointer;
+        &:hover {
+          background-color: lime;
+        }
+        &:active {
+          background-color: green;
+        }
       }
-      &:active {
-        background-color: green;
-      }
+    }
+
+    .month-year {
     }
   }
 
-  .calendar-container {
+  .calendar-main {
     margin: 1em;
     display: flex;
     justify-content: center;
@@ -71,13 +80,5 @@
         background-color: rgb(255, 241, 243);
       }
     }
-  }
-
-
-  .fade-enter-active, .fade-leave-active {
-    transition: opacity .15s;
-  }
-  .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
-    opacity: 0;
   }
 }
