Event pop-up now shows up beside the clicked event, or the new event being made

--- a/src/components/Admin/Calendar/calendar.html
+++ b/src/components/Admin/Calendar/calendar.html
@@ -54,7 +54,7 @@
 
   <event-pop-up
     v-if="eventMenuDisplayed"
-    :style-position="eventMenuStylePosition"
+    :style-position="eventPopUpStylePosition"
     :date="currentDateSelected"
     :event-data="selectedEventData"
   />
