Event pop up shows proper date and time. Refactoring of calendar js

--- a/src/components/Admin/Calendar/calendar.html
+++ b/src/components/Admin/Calendar/calendar.html
@@ -53,7 +53,7 @@
   </div>
 
   <event-pop-up
-    v-if="eventMenuDisplayed"
+    v-if="eventPopUpDisplayed"
     :style-position="eventPopUpStylePosition"
     :date="currentDateSelected"
     :event-data="selectedEventData"
