Data can be emitted from new event pop-up to outside of calendar component

--- a/src/components/Admin/Calendar/calendar.html
+++ b/src/components/Admin/Calendar/calendar.html
@@ -57,6 +57,7 @@
     :style-position="eventPopUpStylePosition"
     :date="currentDateSelected"
     :event-data="selectedEventData"
+    @emit-new-event-data-to-parent="emitNewEventDataToParent"
   />
 
 </div>
