Fixed issue with date not showing in new event pop-up

--- a/src/components/Admin/Calendar/calendar.html
+++ b/src/components/Admin/Calendar/calendar.html
@@ -57,7 +57,7 @@
     :style-position="eventPopUpStylePosition"
     :date="selectedDate"
     :event-data="selectedEventData"
-    @emit-new-event-data-to-parent="emitNewEventDataToParent"
+    @handle-click-okay-in-pop-up="handleClickOkayInPopUp"
   />
 
 </div>
