Removed unwanted fields form post request

--- a/src/components/Admin/Calendar/calendar.html
+++ b/src/components/Admin/Calendar/calendar.html
@@ -14,7 +14,7 @@
     </div>
   </div>
 
-  <div class="calendar-main" v-on:click="hidePopUpAfterClickOutsidePopUp">
+  <div id="calendar-main" class="calendar-main" v-on:click="hidePopUpAfterClickOutsidePopUp">
     <div class="view-month">
 
       <div
