Job request data is put into calendar pop-up if 'make this a job' button pressed

--- a/src/components/Admin/Calendar/calendar.html
+++ b/src/components/Admin/Calendar/calendar.html
@@ -58,6 +58,7 @@
     :date="selectedDate"
     :event-data="selectedEventData"
     @handle-click-okay-in-pop-up="handleClickOkayInPopUp"
+    :job-request-data="jobRequestData"
   />
 
 </div>
