--- a/src/components/Admin/Calendar/calendar.scss
+++ b/src/components/Admin/Calendar/calendar.scss
@@ -24,12 +24,14 @@
         }
       }
     }
-
-    .month-year {
-    }
   }
 
   .calendar-main {
+    $current-month-day-color: pink;
+    $adjacent-month-day-color: rgb(255, 241, 243);
+    $day-num-header: rgb(199, 244, 255);
+    $day-name-header: rgb(238, 238, 238);
+
     margin: 1em;
     display: flex;
     justify-content: center;
@@ -44,7 +46,7 @@
 
       .day-header {
         height: 2em;
-        background-color: rgb(238, 238, 238);
+        background-color: $day-name-header;
         display: flex;
         justify-content: flex-end;
         align-items: center;
@@ -64,7 +66,7 @@
           display: inline-block;
           top: 0;
           right: 0;
-          background-color: rgb(199, 244, 255);
+          background-color: $day-num-header;
           width: 100%;
           text-align: right;
           padding-right: 0.5em;
@@ -78,11 +80,11 @@
       }
 
       .day-current-month {
-        background-color: pink;
+        background-color: $current-month-day-color;
       }
 
       .day-adjacent-month {
-        background-color: rgb(255, 241, 243);
+        background-color: $adjacent-month-day-color;
       }
     }
   }
